--- a/WebSite-lianjia/src/main/resources/bootstrap.yml
+++ b/WebSite-lianjia/src/main/resources/bootstrap.yml
@@ -6,7 +6,7 @@ spring:
     config:
       discovery:
         enabled: true
-        serviceId: website-eureka-config
+        serviceId: website-eureka-config-zuul
 eureka:
   instance:
     prefer-ip-address: true
