zuul和eureka还有config放一起

--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
     <modules>
         <module>WebSite-Root</module>
         <module>WebSite-web</module>
-        <module>WebSite-eureka-config</module>
+        <module>WebSite-eureka-config-zuul</module>
         <module>WebSite-lianjia</module>
     </modules>
     <parent>
