--- a/WebSite-eureka-config-zuul/pom.xml
+++ b/WebSite-eureka-config-zuul/pom.xml
@@ -7,7 +7,7 @@
         <groupId>ddvudo</groupId>
         <version>2.0-SNAPSHOT</version>
     </parent>
-    <artifactId>WebSite-eureka-config</artifactId>
+    <artifactId>WebSite-eureka-config-zuul</artifactId>
     <version>2.0-SNAPSHOT</version>
     <modelVersion>4.0.0</modelVersion>
 
