听说github挂了，试下push

--- a/WebSite-web/src/main/resources/bootstrap.yml
+++ b/WebSite-web/src/main/resources/bootstrap.yml
@@ -15,7 +15,7 @@ eureka:
 ribbon:
   ReadTimeout: 5000
   ConnectTimeout: 5000
-logging:
-  level:
-    root:
-      debug
+#logging:
+#  level:
+#    root:
+#      info
