--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
         <module>WebSite-web</module>
         <module>WebSite-eureka-config-zuul</module>
         <module>WebSite-lianjia</module>
-        <module>WebSite_FileManage</module>
+        <module>WebSite-FileManage</module>
     </modules>
     <parent>
         <groupId>org.springframework.boot</groupId>
