--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 # 设置端口号
 server.port=80
 # 数据库配置
-spring.datasource.druid.url=jdbc:postgresql://149.129.74.179:5432/how2jdb?characterEncoding=UTF-8&autoReconnect=true&failOverReadOnly=false&allowMultiQueries=true&useSSL=false&serverTimezone=GMT%2B8
+spring.datasource.druid.url=jdbc:postgresql://194.156.133.226:5432/how2jdb?characterEncoding=UTF-8&autoReconnect=true&failOverReadOnly=false&allowMultiQueries=true&useSSL=false&serverTimezone=GMT%2B8
 spring.datasource.druid.driver-class-name=org.postgresql.Driver
 spring.datasource.druid.username=postgres
 spring.datasource.druid.password=liukang951006
@@ -12,7 +12,7 @@ spring.datasource.druid.test-on-return=false
 spring.datasource.druid.initial-size=5
 mybatis.mapper-locations=classpath:ddvudo/ORM/Mapper/*.xml
 # 文件存储配置
-ddvudo.MinIO.endpoint=http://194.156.133.128:9000/
+ddvudo.MinIO.endpoint=http://194.156.133.226:9000/
 ddvudo.MinIO.accessKey=admin
 ddvudo.MinIO.secretKey=liukang951006
 # 错误页面
@@ -36,7 +36,7 @@ spring.servlet.multipart.enabled=true
 spring.servlet.multipart.max-file-size=100MB
 spring.servlet.multipart.max-request-size=500MB
 #####################
-spring.redis.host=194.156.133.128
+spring.redis.host=194.156.133.226
 spring.redis.port=6379
 spring.redis.password=liukang951006
 #####################
@@ -46,4 +46,5 @@ server.servlet.session.timeout=600
 file.tmp.location=D://ncovData
 # 日志级别
 logging.level.root=INFO
+jasypt.encryptor.password=liukang951006
 #logging.level.ddvudo.ORM.Mapper=DEBUG
