--- a/pom.xml
+++ b/pom.xml
@@ -161,6 +161,11 @@
             <artifactId>jasypt-spring-boot-starter</artifactId>
             <version>2.1.1</version>
         </dependency>
+        <dependency>
+            <groupId>org.whispersystems</groupId>
+            <artifactId>curve25519-java</artifactId>
+            <version>0.5.0</version>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
