--- a/WebSite-eureka/src/main/resources/bootstrap.yml
+++ b/WebSite-eureka/src/main/resources/bootstrap.yml
@@ -9,6 +9,8 @@ eureka:
   client:
     register-with-eureka: false
     fetch-registry: false
+    service-url:
+      defaultZone: http://127.0.0.1:${server.port}/eureka
   server:
     wait-time-in-ms-when-sync-empty: 5
 management:
