--- a/WebSite-lianjia/src/main/resources/bootstrap.yml
+++ b/WebSite-lianjia/src/main/resources/bootstrap.yml
@@ -1,4 +1,3 @@
-
 spring:
   application:
     name: lianjia
@@ -6,7 +5,7 @@ spring:
     config:
       discovery:
         enabled: true
-        serviceId: website-eureka-config-zuul
+        serviceId: website-config
 eureka:
   instance:
     prefer-ip-address: true
@@ -14,6 +13,6 @@ eureka:
     register-with-eureka: true
     fetch-registry: true
     serviceUrl:
-      defaultZone: http://localhost:8002/eureka/
+      defaultZone: http://localhost:8001/eureka/
 server:
   port: 8004
